# DgnssServer

./: CMakeLists.txt  README.md  目录说明.txt
AgnssCapture/: .cproject  .project  AppConfig.h  AppConst.h  Application.cpp  Application.h  CCaptureSink.cpp  CCaptureSink.h  CMakeLists.txt  CaptureSink.h  CaptureTcpConnection.cpp  CaptureTcpConnection.h  CaptureTcpServer.cpp  CaptureTcpServer.h  Makefile  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Version.h  main.cpp
AgnssCaster/: .project  pom.xml
AgnssCaster/src/main/conf/: AgnssCaster.json
AgnssCaster/src/main/java/wits/AgnssCaster/: App.java
AgnssCaster/src/main/java/wits/api/: AgnssHandler.java  ApiHandler.java
AgnssCaster/src/main/java/wits/common/: ConfigLoader.java
AgnssCaster/src/main/java/wits/model/: AgnssAssistData.java  AgnssData.java  AgnssFrameHeader.java  AgnssParam.java
AgnssCaster/src/main/java/wits/util/: CompositeFutureUtil.java  HttpClientUtil.java  JsonFormat.java  JsonMapper.java  JsonSqlClient.java  JsonUtil.java  Md5.java  NetUtil.java  PathUtil.java  SqlBuilder.java  SqlClientHelper.java  SqlCondition.java  StringPairList.java
AgnssCaster/src/main/java/wits/web/: CodeMessage.java  DataMap.java  JdbcMd5Auth.java  JsonResponse.java  Md5HashStrategy.java  RedirectHandler.java  RestRouterHandler.java  RestSessionHandler.java  RouterHandler.java  RoutingContextHandler.java  UserFormLoginHandler.java  UserSessionHandler.java  WebRoot.java
AgnssCaster/src/main/resources/: vertx-default-jul-logging.properties
AgnssCaster/src/test/java/wits/AgnssCaster/: AppTest.java
AgnssCommon/: AgnssType.cpp  AgnssType.h
AgnssServer/: .cproject  .project  AppConfig.cpp  AppConst.cpp  Application.cpp  Application.h  AssistData.c  AssistData.h  AssistDataProcessor.cpp  AssistDataProcessor.h  CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  DataProcessorMap.cpp  DataProcessorMap.h  Makefile  Version.h  main.cpp
comn/: .cproject  .hgignore  .project  Android.mk  CMakeLists.txt  Makefile  comn.sln  comn.vcproj  readme.md  todo.md
comn/demo/: CMakeLists.txt  main.cpp
comn/include/: Base64.h  BasicMacro.h  BasicType.h  CLog.h  CStr.h  CTimerQueue.h  CharArray.h  ClockTime.h  DateTime.h  IniFile.h  IniProperties.h  Md5.h  NumGenerator.h  OptionParser.h  Path.h  PercentEncoding.h  SharedPtr.h  Socket.h  StopWatch.h  TAutoString.h  TByteBuffer.h  TCriticalSection.h  TDiscreteArray.h  TEvent.h  TFileUtil.h  TIOBuffer.h  TMap.h  TMapUtil.h  TMutex.h  TProperties.h  TRandom.h  TSafeStr.h  TSemaphore.h  TSingleton.h  TStlUtil.h  TStringCast.h  TStringUtil.h  TThread.h  TimerQueue.h  WTypesbase.h
comn/src/: Base64.cpp  CLog.cpp  CLog.ini  CStr.cpp  CTimerQueue.cpp  ClockTime.cpp  DateTime.cpp  IniFile.cpp  IniProperties.cpp  Md5.cpp  OptionParser.cpp  Path.cpp  PercentEncoding.cpp  Socket.cpp
comn/test/: CMakeLists.txt  comn.cpp
doc/: agnss.asta  agnss.mwb  agnss.sql  memo.txt  数据采集分发服务接口.docx  数据采集分发系统测试报告.docx  数据采集分发系统设计.docx  数据采集分发系统部署.docx
reference/: AGNSS Server服务方案评估.docx  武汉梦芯科技有限公司AGNSS server开发需求及交付要求.docx
setup/: AgnssCapture.ini  AgnssCaster.sh  AgnssServer.ini
test/: 并发.jmx
